@@ -76,7 +76,7 @@ function xenobe_to_sec_def ($db)
             }
 
             $playerinfo['ship_energy'] = $playerinfo['ship_energy'] - $playerbeams;
-            $playershields = NUM_SHIELDS ($playerinfo['shields']);
+            $playershields = \bnt\CalcLevels::Shields ($playerinfo['shields'], $level_factor);
             if ($playershields > $playerinfo['ship_energy'])
             {
                 $playershields = $playerinfo['ship_energy'];
